test/errors/int_bits_too_wide.haste
const a: int256 = 1;
